rearrange some things in combat section

--- a/workspaces/web/app/routes/_guide.rulebook/content.mdx
+++ b/workspaces/web/app/routes/_guide.rulebook/content.mdx
@@ -443,11 +443,7 @@ Additionally:
 
 [^changing-actions-exceptions]: An exception: some mechanics may explicitly allow a character to change their action. Notably, the _Foresight_ aspect art.
 
-### The Action Phase
-
-After all players have made their decision, resolve actions in initiative order, including dice rolls, random selections, fatigue, hits, and all other side effects.
-
-### Movement
+#### Movement
 
 You may move one zone in a combat round. Movement does not use an action; you can move and use an aspect art in the same round, for example.
 
@@ -457,8 +453,12 @@ Optionally, you can choose to make a Dash check as an action[^dash-with-surge]. 
 
 Movement should be written down during the decision phase.
 
-### Adrenaline
+#### Adrenaline
 
 Adrenaline allows you to take **2 fatigue** for **1 additional action** in combat. You may use adrenaline only once per round.
 
 When using adrenaline, write it down during the decision phase, along with the additional action you're making with it. Only deduct the fatigue during the action phase if you were able to carry out adrenaline action.
+
+### The Action Phase
+
+After all players have made their decision, resolve actions in initiative order, including dice rolls, random selections, fatigue, hits, and all other side effects.
